tests/errors/surf_parse_17.ki
# PARSER: an empty switch-case arm body (a case with no indented statements)
switch 1:
    case 1:
    default:
        discard 2